@@ -1,6 +1,8 @@
 MD5 cd2b3c6e675a5f16322721fc6b3dacdb flagedit-0.0.3.ebuild 589
 MD5 b65665d43270676b80e0389cf877dbb3 metadata.xml 251
-MD5 f3712afdbc57c7b5264e7444e62f2627 ChangeLog 652
+MD5 bde9e13f4d4961340f1c31f5ef4672e6 ChangeLog 772
 MD5 90ecdaf495143836015f6096f6c754ac flagedit-0.0.2.ebuild 590
+MD5 62f30c1ad6d39d573909ab57585a5a6e flagedit-0.0.4.ebuild 589
 MD5 92b9af1bbae1bb2cd67c5e4eb996b986 files/digest-flagedit-0.0.2 65
 MD5 6408f28d6916ebe9f93105cd20de82e8 files/digest-flagedit-0.0.3 65
+MD5 a1d207ee2d2cbcad738c791c7fea13ec files/digest-flagedit-0.0.4 65
