@@ -1,0 +1,18 @@
+# Copyright 1999-2005 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-portage/cvs-repo/gentoo-x86/app-portage/flagedit/Attic/flagedit-0.0.4.ebuild,v 1.1 2005/10/19 11:32:22 dams Exp $
+
+DESCRIPTION="CLI use flags and keyword editor, for system wide or /etc/portage files"
+HOMEPAGE="http://damz.net/flagedit/"
+SRC_URI="http://damz.net/flagedit/download/${P}.tar.bz2"
+
+SLOT="0"
+LICENSE="GPL-2"
+KEYWORDS="~amd64 ~ppc ~x86"
+
+RDEPEND="dev-lang/perl
+>=dev-util/libconf-0.40.00"
+
+src_install() {
+	make install PREFIX="${D}"/usr || die "make install failed"
+}
